--- a/website/src/framework/link-panels/link-panels.component.scss
+++ b/website/src/framework/link-panels/link-panels.component.scss
@@ -34,6 +34,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    text-align: center;
 
     &:not(.hoverable) {
         cursor: initial;
@@ -54,8 +55,14 @@
     }
 
     &.lc-card-cols-3 {
-        @media (max-width: $media-max-width-mobile) {
-            gap: 16px;
+        td-rich-text {
+            margin-top: 8px;
+        }
+
+        td-button {
+            @media (max-width: $media-max-width-mobile) {
+                margin-top: 16px;
+            }
         }
 
         .lc-flex-container {
@@ -64,12 +71,6 @@
             @media (max-width: $media-max-width-mobile) {
                 text-align: start;
                 gap: 8px;
-            }
-
-            td-rich-text {
-                @media (min-width: $media-min-width-tablet) {
-                    margin-top: 8px;
-                }
             }
 
             .lc-title {
@@ -120,6 +121,11 @@
     &.lc-icon-card {
         @media (max-width: $media-max-width-mobile) {
             flex-direction: row;
+            gap: 8px;
+
+            td-rich-text {
+                margin-top: 0;
+            }
         }
     }
 
